Airway Restrictions (EU)

--- a/start_page.html
+++ b/start_page.html
@@ -1113,7 +1113,219 @@ tr:nth-child(even) {
                         </details>
                         <details>
                             <summary>6 - U - Airway Restrictions (EU)</summary>
-                            <img src="Tables/EU_Airway_Restrictions.png" alt="EU_Airway_Restrictions">
+                            <table>
+								<caption><a href="Tables/EU_Airway_Restrictions.png" target="_blank">Altitude Exclusion Primary Records</a></caption>
+                                <tr>
+                                    <th>Column</th>
+                                    <th>Field Name</th>
+                                    <th>Reference</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Record Type</td>
+                                    <td><a href="References/5_2_Record_Type.png" target="_blank">5.2</a></td>
+                                </tr>
+								 <tr>
+                                    <td>2-4</td>
+                                    <td>Customer/Area Code</td>
+                                    <td><a href="References/5_3_Customer_Area_Code.png" target="_blank">5.3</a></td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+								<tr>
+                                    <td>7-11</td>
+                                    <td>Route Identifier</td>
+                                    <td><a href="References/5_8_Route_Identifier.png" target="_blank">5.8</a></td>
+                                </tr>
+								<tr>
+                                    <td>12</td>
+                                    <td>Reserved</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>13-15</td>
+                                    <td>Restriction Identifier</td>
+                                    <td><a href="References/5_154_Restriction_Identifier.png" target="_blank">5.154</a></td>
+                                </tr>
+                                <tr>
+                                    <td>16-17</td>
+                                    <td>Restriction Type</td>
+                                    <td><a href="References/5_201_Restriction_Type.png" target="_blank">5.201</a></td>
+                                </tr>
+								<tr>
+                                    <td>18</td>
+                                    <td>Continuation Record №</td>
+                                    <td><a href="References/5_16_Cont_Record.png" target="_blank">5.16</a></td>
+                                </tr>
+                                <tr>
+                                    <td>19-23</td>
+                                    <td>Start Fix Identifier</td>
+                                    <td><a href="References/5_13_Fix_Identifier.png" target="_blank">5.13</a></td>
+                                </tr>
+								<tr>
+                                    <td>24-25</td>
+                                    <td>Start Fix ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>26</td>
+                                    <td>Start Fix Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+								<tr>
+                                    <td>27</td>
+                                    <td>Start Fix Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+                                <tr>
+                                    <td>28-32</td>
+                                    <td>End Fix Identifier</td>
+                                    <td><a href="References/5_13_Fix_Identifier.png" target="_blank">5.13</a></td>
+                                </tr>
+								<tr>
+                                    <td>33-34</td>
+                                    <td>End Fix ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>35</td>
+                                    <td>End Fix Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+								<tr>
+                                    <td>36</td>
+                                    <td>End Fix Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+                                <tr>
+                                    <td>37</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>38-44</td>
+                                    <td>Start Date</td>
+                                    <td><a href="References/5_157_Restriction_Start_End_Date.png" target="_blank">5.157</a></td>
+                                </tr>
+                                <tr>
+                                    <td>45-51</td>
+                                    <td>End Date</td>
+                                    <td><a href="References/5_157_Restriction_Start_End_Date.png" target="_blank">5.157</a></td>
+                                </tr>
+								<tr>
+                                    <td>52</td>
+                                    <td>Time Code</td>
+                                    <td><a href="References/5_131_Time_Code.png" target="_blank">5.131</a></td>
+                                </tr>
+                                <tr>
+                                    <td>53</td>
+                                    <td>Time Indicator</td>
+                                    <td><a href="References/5_138_Time_Indicator.png" target="_blank">5.138</a></td>
+                                </tr>
+								<tr>
+                                    <td>54-63</td>
+                                    <td>Time of Operation</td>
+                                    <td><a href="References/5_195_Time_of_Operation.png" target="_blank">5.195</a></td>
+                                </tr>
+                                <tr>
+                                    <td>64-73</td>
+                                    <td>Time of Operation</td>
+                                    <td><a href="References/5_195_Time_of_Operation.png" target="_blank">5.195</a></td>
+                                </tr>
+								<tr>
+                                    <td>74-83</td>
+                                    <td>Time of Operation</td>
+                                    <td><a href="References/5_195_Time_of_Operation.png" target="_blank">5.195</a></td>
+                                </tr>
+                                <tr>
+                                    <td>84-93</td>
+                                    <td>Time of Operation</td>
+                                    <td><a href="References/5_195_Time_of_Operation.png" target="_blank">5.195</a></td>
+                                </tr>
+								<tr>
+                                    <td>94</td>
+                                    <td>Exclusion Indicator</td>
+                                    <td><a href="References/5_202_Exclusion_Indicator.png" target="_blank">5.202</a></td>
+                                </tr>
+                                <tr>
+                                    <td>95</td>
+                                    <td>Units of Altitude</td>
+                                    <td><a href="References/5_160_Units_of_Altitude.png" target="_blank">5.160</a></td>
+                                </tr>
+								<tr>
+                                    <td>96-98</td>
+                                    <td>Restriction Altitude</td>
+                                    <td><a href="References/5_161_Restriction_Altitude.png" target="_blank">5.161</a></td>
+                                </tr>
+                                <tr>
+                                    <td>99</td>
+                                    <td>Block Indicator</td>
+                                    <td><a href="References/5_203_Block_Indicator.png" target="_blank">5.203</a></td>
+                                </tr>
+								<tr>
+                                    <td>100-102</td>
+                                    <td>Restriction Altitude</td>
+                                    <td><a href="References/5_161_Restriction_Altitude.png" target="_blank">5.161</a></td>
+                                </tr>
+                                <tr>
+                                    <td>103</td>
+                                    <td>Block Indicator</td>
+                                    <td><a href="References/5_203_Block_Indicator.png" target="_blank">5.203</a></td>
+                                </tr>
+								<tr>
+                                    <td>104-106</td>
+                                    <td>Restriction Altitude</td>
+                                    <td><a href="References/5_161_Restriction_Altitude.png" target="_blank">5.161</a></td>
+                                </tr>
+                                <tr>
+                                    <td>107</td>
+                                    <td>Block Indicator</td>
+                                    <td><a href="References/5_203_Block_Indicator.png" target="_blank">5.203</a></td>
+                                </tr>
+								<tr>
+                                    <td>108-110</td>
+                                    <td>Restriction Altitude</td>
+                                    <td><a href="References/5_161_Restriction_Altitude.png" target="_blank">5.161</a></td>
+                                </tr>
+                                <tr>
+                                    <td>111</td>
+                                    <td>Block Indicator</td>
+                                    <td><a href="References/5_203_Block_Indicator.png" target="_blank">5.203</a></td>
+                                </tr>
+								<tr>
+                                    <td>112-114</td>
+                                    <td>Restriction Altitude</td>
+                                    <td><a href="References/5_161_Restriction_Altitude.png" target="_blank">5.161</a></td>
+                                </tr>
+                                <tr>
+                                    <td>115</td>
+                                    <td>Block Indicator</td>
+                                    <td><a href="References/5_203_Block_Indicator.png" target="_blank">5.203</a></td>
+                                </tr>
+                                <tr>
+                                    <td>116-118</td>
+                                    <td>Restriction Altitude</td>
+                                    <td><a href="References/5_161_Restriction_Altitude.png" target="_blank">5.161</a></td>
+                                </tr>
+                                <tr>
+                                    <td>119</td>
+                                    <td>Block Indicator</td>
+                                    <td><a href="References/5_203_Block_Indicator.png" target="_blank">5.203</a></td>
+                                </tr>
+                                <tr>
+                                    <td>120-122</td>
+                                    <td>Restriction Altitude</td>
+                                    <td><a href="References/5_161_Restriction_Altitude.png" target="_blank">5.161</a></td>
+                                </tr>
+                            </table>
                         </details>
                         <details>
                             <summary>6 - V - Communications (EV)</summary>
