--- a/start_page.html
+++ b/start_page.html
@@ -1329,7 +1329,164 @@ tr:nth-child(even) {
                         </details>
                         <details>
                             <summary>6 - V - Communications (EV)</summary>
-                            <img src="Tables/EV_Communications.png" alt="EV_Communications">
+                            <table>
+								<caption><a href="Tables/EV_Communications.png" target="_blank">Enroute Communications Primary Records</a></caption>
+                                <tr>
+                                    <th>Column</th>
+                                    <th>Field Name</th>
+                                    <th>Reference</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Record Type</td>
+                                    <td><a href="References/5_2_Record_Type.png" target="_blank">5.2</a></td>
+                                </tr>
+								 <tr>
+                                    <td>2-4</td>
+                                    <td>Customer/Area Code</td>
+                                    <td><a href="References/5_3_Customer_Area_Code.png" target="_blank">5.3</a></td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+								<tr>
+                                    <td>7-10</td>
+                                    <td>FIR/RDO Identifier</td>
+                                    <td><a href="References/5_190_FIR_RDO_Identifier.png" target="_blank">5.190</a></td>
+                                </tr>
+								<tr>
+                                    <td>11-14</td>
+                                    <td>FIR/UIR Address</td>
+                                    <td><a href="References/5_151_FIR_UIR_Address.png" target="_blank">5.151</a></td>
+                                </tr>
+								<tr>
+                                    <td>15</td>
+                                    <td>Indicator</td>
+                                    <td><a href="References/5_117_FIR_UIR_Indicator.png" target="_blank">5.117</a></td>
+                                </tr>
+								<tr>
+                                    <td>16-18</td>
+                                    <td>Reserved</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>19-43</td>
+                                    <td>Remote Name</td>5_189_Remote_Site_Name
+                                    <td><a href="References/5_189_Remote_Site_Name.png" target="_blank">5.189</a></td>
+                                </tr>
+								<tr>
+                                    <td>44-46</td>
+                                    <td>Communications Type</td>
+                                    <td><a href="References/5_101_Communications_Type.png" target="_blank">5.101</a></td>
+                                </tr>
+								<tr>
+                                    <td>47-53</td>
+                                    <td>Communications Frequency</td>
+                                    <td><a href="References/5_103_Communications_Frequency.png" target="_blank">5.103</a></td>
+                                </tr>
+								<tr>
+                                    <td>54</td>
+                                    <td>Guard/Transmit</td>
+                                    <td><a href="References/5_182_Guard_Transmit.png" target="_blank">5.182</a></td>
+                                </tr>
+                                <tr>
+                                    <td>55</td>
+                                    <td>Frequency Units</td>
+                                    <td><a href="References/5_104_Frequency_Units.png" target="_blank">5.104</a></td>
+                                </tr>
+								<tr>
+                                    <td>56</td>
+                                    <td>Continuation Record №</td>
+                                    <td><a href="References/5_16_Cont_Record.png" target="_blank">5.16</a></td>
+                                </tr>
+								<tr>
+                                    <td>57-59</td>
+                                    <td>Service Indicator</td>
+                                    <td><a href="References/5_106_Service_Indicator.png" target="_blank">5.106</a></td>
+                                </tr>
+								<tr>
+                                    <td>60</td>
+                                    <td>Radar Service</td>
+                                    <td><a href="References/5_102_Radar_Service.png" target="_blank">5.102</a></td>
+                                </tr>
+                                <tr>
+                                    <td>61</td>
+                                    <td>Modulation</td>
+                                    <td><a href="References/5_198_Modulation.png" target="_blank">5.198</a></td>
+                                </tr>
+								<tr>
+                                    <td>62</td>
+                                    <td>Signal Emission</td>
+                                    <td><a href="References/5_199_Signal_Emission.png" target="_blank">5.199</a></td>
+                                </tr>
+								<tr>
+                                    <td>63-71</td>
+                                    <td>Latitude</td>
+                                    <td><a href="References/5_36_Latitude.png" target="_blank">5.36</a></td>
+                                </tr>
+								<tr>
+                                    <td>72-81</td>
+                                    <td>Longitude</td>
+                                    <td><a href="References/5_37_Longitude.png" target="_blank">5.37</a></td>
+                                </tr>
+                                <tr>
+                                    <td>82-86</td>
+                                    <td>Magnetic Variation</td>
+                                    <td><a href="References/5_39_Magnetic_Variation.png" target="_blank">5.39</a></td>
+                                </tr>
+								<tr>
+                                    <td>87-91</td>
+                                    <td>Facility Elevation</td>
+                                    <td><a href="References/5_92_Facility_Elevation.png" target="_blank">5.92</a></td>
+                                </tr>
+								<tr>
+                                    <td>92</td>
+                                    <td>H24 Indicator</td>
+                                    <td><a href="References/5_181_H24_Indicator.png" target="_blank">5.181</a></td>
+                                </tr>
+								<tr>
+                                    <td>93</td>
+                                    <td>Altitude Description</td>
+                                    <td><a href="References/5_29_Altitude_Description.png" target="_blank">5.29</a></td>
+                                </tr>
+                                <tr>
+                                    <td>94-98</td>
+                                    <td>Communication Altitude</td>
+                                    <td><a href="References/5_184_Communication_Altitude.png" target="_blank">5.184</a></td>
+                                </tr>
+								<tr>
+                                    <td>99-103</td>
+                                    <td>Communication Altitude</td>
+                                    <td><a href="References/5_184_Communication_Altitude.png" target="_blank">5.184</a></td>
+                                </tr>
+								<tr>
+                                    <td>104-107</td>
+                                    <td>Remote Facility</td>
+                                    <td><a href="References/5_200_Remote_facility.png" target="_blank">5.200</a></td>
+                                </tr>
+								<tr>
+                                    <td>108-109</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>110</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>111</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+                            </table>
                         </details>
                     </ul>
                 </details>
