преобразовать строку в таблицу с порядковыми номерами

--- a/start_page.html
+++ b/start_page.html
@@ -1648,5 +1648,14 @@ tr:nth-child(even) {
     <div><span class="titles">T -Tailored (included on the master tape for a single user’s specific purpose)</span></div>
         <div><span class="first">1 - T - Tailored</span></div>
         <div><span class="first">2-4 Airlines for whom tailored records are provided in the master file</span></div>
+
+    <div class="container">
+        <h1>Преобразовать строку ARINC</h1>
+        <input type="text" id="input-string" placeholder="Введите строку ARINC...">
+        <button onclick="convertString()">Преобразовать</button>
+        <button onclick="clearInput()">Очистить</button>
+        <table id="result-table"></table>
+    </div>
+    <script src="Scripts/string_to_table.js"></script>
 </body>
 </html>
