--- a/start_page.html
+++ b/start_page.html
@@ -106,7 +106,7 @@ tr:nth-child(even) {
                 </details>
 
                 <details>
-                    <summary>5 - D - Navaid</summary>
+                    <summary>5 - D - NAVAID</summary>
                         <ul>
                         <details>
                             <summary>6 - Blank - VHF NAVAID (D)</summary>
@@ -1655,6 +1655,7 @@ tr:nth-child(even) {
         <button onclick="convertString()">Преобразовать</button>
         <button onclick="clearInput()">Очистить</button>
         <table id="result-table"></table>
+        <p id="message"></p> <!-- Блок для вывода сообщения -->
     </div>
     <script src="Scripts/string_to_table.js"></script>
 </body>
