--- a/start_page.html
+++ b/start_page.html
@@ -364,7 +364,7 @@ tr:nth-child(even) {
                                 </tr>
                                 <tr>
                                     <td>94-123</td>
-                                    <td>VOR Name</td>
+                                    <td>NDB Name</td>
                                     <td><a href="References/5_71_Name_Field.png" target="_blank">5.71</a></td>
                                 </tr>
                             </table>
